# NTNU-Graphics-Assignment2

./: .gitignore  CMakeLists.txt  README.md
include/game/: game_application.h  game_input.h  game_mesh.h  game_movement.h  game_objectsDELETE.h  game_platform.h  game_user_interface.h  gl_error_handling.h  global_game_input.h  global_game_variables.h  glutil.h  struct_transform.h
include/renderer/: Renderer.h  camera.h  global_renderer_information.h  global_renderer_shader_locations.h  renderer_light.h  renderer_light_shadows.h  renderer_model.h  renderer_shader.h  renderer_sprite.h  renderer_texture.h  renderer_vertex_data.h  resource_manager.h
resources/levels/: level0
resources/shaders/: shadow_depth_vertex.vert  sprite_fragment.frag  sprite_vertex.vert  test_depth_fragment.frag  test_depth_vertex.vert
resources/textures/: HHsprite_sheet.aseprite  wall_textures.aseprite
src/: main.cpp
src/game/: game_application.cpp  game_application_input.cpp  game_application_user_interface.cpp  game_input.cpp  game_mesh.cpp  game_movement.cpp  game_objectsDELETE.cpp  game_objects_input_callbacks.cpp  game_platform.cpp  game_user_interface.cpp  glutil.cpp  soppel.cpp
src/gameObjects/: game_object.cpp  game_object.h  game_objects.cpp  game_objects.h
src/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
src/imgui/misc/freetype/: imgui_freetype.cpp
src/physics/: game_intersectdata.h  game_rigidbody.h  game_square_bounds.cpp  game_square_bounds.h
src/renderer/: camera.cpp  renderer.cpp  renderer_light.cpp  renderer_light_shadows.cpp  renderer_model.cpp  renderer_shader.cpp  renderer_shader_light.cpp  renderer_sprite.cpp  renderer_texture.cpp  resource_manager.cpp
